Home Page complite

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css"> </head>
 
 <body>
     <div class="container">
@@ -19,15 +18,14 @@
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
                     <li class="menu-list">
-                        <a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a>
+                        <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
                 </ul>
             </div>
             <div class="slider-text">
                 <p class="slider-tranding">TRENDING</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
-            </div>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -37,10 +35,9 @@
         <div class="content">
             <div class="menu-cont clearfix">
                 <ul class="menu-cont-list">
-                    <li class="menunewfcontent"><a href="#" class="menu-link-fea  menu-link-active">Featuted</a></li>
-                    <li class="menunewfcontent"><a href="#" class="menu-link-new">New</a></li>
-                </ul> <a href="#" class="explore-all">explore all ></a>
-            </div>
+                    <li class="menunewfcontent"><a href="#" class="menu-link-fea  menu-link-active link-active">Featuted</a></li>
+                    <li class="menunewfcontent"><a href="#" class="menu-link-new link-active">New</a></li>
+                </ul> <a href="#" class="explore-all link-active">explore all ></a> </div>
             <div class="product">
                 <div class="tovary">
                     <ul class="menu-product">
@@ -64,22 +61,19 @@
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
-                    </div>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
                 </div>
                 <div class="promo-right">
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
-                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
-                    </div>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
                 </div>
                 <div class="content">
                     <div class="menu-cont clearfix">
                         <ul class="menu-cont-list2">
-                            <li class="menunewfcontent"><a href="#" class="menu-link-fea">Trending Products</a></li>
-                        </ul> <a href="#" class="explore-all">explore all ></a>
-                    </div>
+                            <li class="menunewfcontent"><a href="#" class="menu-link-fea link-active">Trending Products</a></li>
+                        </ul> <a href="#" class="explore-all link-active">explore all ></a> </div>
                     <div class="product">
                         <div class="tovary2">
                             <ul class="menu-product2">
@@ -115,8 +109,7 @@
             <div class="slider-text2">
                 <p class="slider-hotdeal">hot deal</p>
                 <h2 class="slider-h2">Fishnet Chair</h2>
-                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a>
-            </div>
+                <p class="slider-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
             <div class="pagination clearfix">
                 <a href="#" class="circle"></a>
                 <a href="#" class="circle circle-active"></a>
@@ -128,8 +121,7 @@
                 <div class="slider-text3">
                     <p class="slider-exclusive">exclusive</p>
                     <h2 class="slider-h2 s3">Fishnet Chair</h2>
-                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us ></a>
-                </div>
+                    <p class="slider-content s3c">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p> <a href="#" class="button">Order Us ></a> </div>
             </div>
             <div class="product3">
                 <div class="tabl3l">
@@ -163,19 +155,16 @@
         </div>
         <div class="footerblock">
             <div class="footermenu">
-
                 <div class="menufooter">
                     <div class="left-col">
                         <div class="h-footer-menu">
                             <p>Contact Us</p>
                         </div>
                         <div class="footer-p-left1">
-                            <p>132A Bridge Road Richmond VIC
-                                Australia.</p>
+                            <p>132A Bridge Road Richmond VIC Australia.</p>
                         </div>
                         <div class="footer-p-left1">
-                            <p>Talk to us on 1300 132
-                                info@interior.com</p>
+                            <p>Talk to us on 1300 132 info@interior.com</p>
                         </div>
                     </div>
                     <div class="center-col">
@@ -184,27 +173,26 @@
                         </div>
                         <div class="center-menu1">
                             <ul>
-                                <li>Sales terms</li>
+                                <li><a href="#" class="center-menu1 link-active">Sales&nbsp;terms</a></li>
                             </ul>
                             <ul>
-                                <li>Customer care</li>
+                                <li><a href="#" class="center-menu1 link-active">Customer&nbsp;care</a> </li>
                             </ul>
                             <ul>
-                                <li>Delivery</li>
+                                <li><a href="#" class="center-menu1 link-active">Delivery</a></li>
                             </ul>
                         </div>
                         <div class="center-menu2">
                             <ul>
-                                <li>Architect accountss</li>
+                                <li><a href="#" class="center-menu2 link-active">Architect&nbsp;accountss</a> </li>
                             </ul>
                             <ul>
-                                <li>Careers</li>
+                                <li><a href="#" class="center-menu2 link-active">Careers</a></li>
                             </ul>
                             <ul>
-                                <li>Exchanges &amp; return</li>
+                                <li><a href="#" class="center-menu2 link-active">Exchanges&nbsp;&amp;&nbsp;return</a> </li>
                             </ul>
                         </div>
-
                     </div>
                     <div class="right-col">
                         <div class="h-footer-menu">
@@ -222,16 +210,14 @@
                     </div>
                 </div>
                 <div class="footer">
-
                     <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
-                    <div class="socialimg"><a href="#" class="soc"><img src="img/social-links.png" alt="social"></a></div>
-                    <div class="terms"><a href="#" class="link">Terms &amp; Conditions</a> / <a href="#" class="link">Privacy policy &amp; Cookies</a></div>
-
+                    <div class="socialimg">
+                        <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
+                    </div>
+                    <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
                 </div>
             </div>
-
         </div>
-
     </div>
 </body>
 
