update style.css footer position bottom

--- a/contact.html
+++ b/contact.html
@@ -4,29 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css"> </head>
 
 <body>
     <div class="container">
-        <div class="hero-back">
+        <div class="hero-back padding-site">
             <div class="header">
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="menu clearfix">
-                    <li class="menu-list"><a href="index.html" class="menu-link menu-link-active">HOME</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
+                    <li class="menu-list"><a href="product.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list"><a href="contact.html" class="menu-link menu-link-active">CONTACT</a></li>
                     <li class="menu-list">
                         <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
                 </ul>
             </div>
+            <div class="title">
+                <p>Contact Us</p>
+            </div>
         </div>
-<div class="contact-content">
-   <!-- ПРОДОЛЖИТЬ ТУТ)))) -->
+        <div class="contact-content padding-site">
+<div class="contacts">
+    <div class="cont1"></div>
+    <div class="cont2"></div>
+    <div class="cont3"></div>
 </div>
+       
+        </div>
+        
+         <div class="clr"></div>
         <div class="footerblock">
             <div class="footermenu">
                 <div class="menufooter">
