--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link menu-link-active">HOME</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="product.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
                     <li class="menu-list">
                         <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
                     </li>
@@ -35,7 +35,7 @@
         <div class="content">
             <div class="menu-cont clearfix">
                 <ul class="menu-cont-list">
-                    <li class="menunewfcontent"><a href="#" class="menu-link-fea  menu-link-active link-active">Featuted</a></li>
+                    <li class="menunewfcontent"><a href="#" class="menu-link-fea  menu-link-active">Featuted</a></li>
                     <li class="menunewfcontent"><a href="#" class="menu-link-new link-active">New</a></li>
                 </ul> <a href="#" class="explore-all link-active">explore all ></a> </div>
             <div class="product">
@@ -153,6 +153,7 @@
             <a href="https://www.apple.com/ru/ios/app-store/" class="buttonapp" target="_blank"><img src="img/app-store.png" alt="" class="apps"></a>
             <a href="https://play.google.com/store" class="buttonapp" target="_blank"><img src="img/google-play.jpg" alt="gplay" class="apps"></a>
         </div>
+        <div class="clr"></div>
         <div class="footerblock">
             <div class="footermenu">
                 <div class="menufooter">
