--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fontsico.css"> </head>
 
 <body>
     <div class="container">
@@ -27,15 +28,40 @@
             </div>
         </div>
         <div class="contact-content padding-site">
-<div class="contacts">
-    <div class="cont1"></div>
-    <div class="cont2"></div>
-    <div class="cont3"></div>
-</div>
-       
+            <div class="contacts">
+                <div class="cont1">
+                    <p class="icon-location">&#xe947;</p>
+                    <h2 class="contact-text-h2">California</h2>
+                    <p class="contact-text">Phone:</p>
+                    <p class="contact-text-bold">1900 - 1234 -5678</p>
+                    <p class="contact-text">Email:</p>
+                    <p class="contact-text-bold">info@interior.com</p>
+                    <p class="contact-address">Adress:</p>
+                    <p class="contact-address">12 W 1st St, 90001 Los Angeles, California</p>
+                </div>
+                <div class="cont2">
+                    <p class="icon-location">&#xe947;</p>
+                    <h2 class="contact-text-h2">California</h2>
+                    <p class="contact-text">Phone:</p>
+                    <p class="contact-text-bold">1900 - 1234 -5678</p>
+                    <p class="contact-text">Email:</p>
+                    <p class="contact-text-bold">info@interior.com</p>
+                    <p class="contact-address">Adress:</p>
+                    <p class="contact-address">12 W 1st St, 90001 Los Angeles, California</p>
+                </div>
+                <div class="cont3">
+                    <p class="icon-location">&#xe947;</p>
+                    <h2 class="contact-text-h2">California</h2>
+                    <p class="contact-text">Phone:</p>
+                    <p class="contact-text-bold">1900 - 1234 -5678</p>
+                    <p class="contact-text">Email:</p>
+                    <p class="contact-text-bold">info@interior.com</p>
+                    <p class="contact-address">Adress:</p>
+                    <p class="contact-address">12 W 1st St, 90001 Los Angeles, California</p>
+                </div>
+            </div>
         </div>
-        
-         <div class="clr"></div>
+        <div class="clr"></div>
         <div class="footerblock">
             <div class="footermenu">
                 <div class="menufooter">
