--- a/proddetals.html
+++ b/proddetals.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Our Products Range</title>
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
@@ -32,46 +32,62 @@
         <div class="content-catalog">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-11.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a></div>
-                <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a></div>
-            </div>
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-21.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-31.jpg" alt=""></a>
                 </div>
             </div>
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-41.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-5.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-6.jpg" alt=""></a>
                 </div>
             </div>
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-11.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-21.jpg" alt=""></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                    <a href="#"><img src="img/product-31.jpg" alt=""></a>
                 </div>
             </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-41.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-5.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-6.jpg" alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="promo">
+                <div class="promo-left">
+                    <div class="promo-text">
+                        <p class="promo-exclusive">exclusive</p>
+                        <h2 class="promo-h2">Fishnet Chair</h2>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
+                </div>
+                <div class="promo-right">
+                    <div class="promo-text">
+                        <p class="promo-exclusive">exclusive</p>
+                        <h2 class="promo-h2">Fishnet Chair</h2>
+                        <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
+                </div>
         </div>
         <div class="clr"></div>
         <div class="footerblock">
@@ -139,8 +155,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </body>
 
