add catalog with bootstrap

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Contacts</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fontsico.css"> </head>
 
@@ -14,7 +14,7 @@
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
-                    <li class="menu-list"><a href="product.html" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="proddetals.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link menu-link-active">CONTACT</a></li>
