--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css"> </head>
 
 <body>
@@ -13,7 +13,7 @@
                 <a href="#"><img src="img/logo.svg" alt="logo"></a>
                 <ul class="menu clearfix">
                     <li class="menu-list"><a href="index.html" class="menu-link menu-link-active">HOME</a></li>
-                    <li class="menu-list"><a href="product.html" class="menu-link">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="proddetals.html" class="menu-link">PRODUCTS</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
                     <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
