--- a/proddetals.html
+++ b/proddetals.html
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Our Products Range</title>
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fontsico.css"> </head>
+
 <body>
-    
+    <div class="container">
+        <div class="hero-back-products padding-site">
+            <div class="header">
+                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <ul class="menu clearfix">
+                    <li class="menu-list"><a href="index.html" class="menu-link">HOME</a></li>
+                    <li class="menu-list"><a href="proddetals.html" class="menu-link menu-link-active">PRODUCTS</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
+                    <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
+                    <li class="menu-list"><a href="contact.html" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list">
+                        <a href="#" class="menu-link" style="border:none"><img src="img/search.svg" alt="search"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="title">
+                <p>Our Products Range</p>
+            </div>
+        </div>
+        <div class="content-catalog">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a></div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a></div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+                <div class="col-md-4">
+                    <a href="#"><img src="img/product-1.jpg" alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="clr"></div>
+        <div class="footerblock">
+            <div class="footermenu">
+                <div class="menufooter">
+                    <div class="left-col">
+                        <div class="h-footer-menu">
+                            <p>Contact Us</p>
+                        </div>
+                        <div class="footer-p-left1">
+                            <p>132A Bridge Road Richmond VIC Australia.</p>
+                        </div>
+                        <div class="footer-p-left1">
+                            <p>Talk to us on 1300 132 info@interior.com</p>
+                        </div>
+                    </div>
+                    <div class="center-col-products">
+                        <div class="h-footer-menu-products">
+                            <p>Useful Information</p>
+                        </div>
+                        <div class="center-menu1">
+                            <ul>
+                                <li><a href="#" class="center-menu1 link-active">Sales&nbsp;terms</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#" class="center-menu1 link-active">Customer&nbsp;care</a> </li>
+                            </ul>
+                            <ul>
+                                <li><a href="#" class="center-menu1 link-active">Delivery</a></li>
+                            </ul>
+                        </div>
+                        <div class="center-menu2">
+                            <ul>
+                                <li><a href="#" class="center-menu2 link-active">Architect&nbsp;accountss</a> </li>
+                            </ul>
+                            <ul>
+                                <li><a href="#" class="center-menu2 link-active">Careers</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#" class="center-menu2 link-active">Exchanges&nbsp;&amp;&nbsp;return</a> </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="right-col">
+                        <div class="h-footer-menu">
+                            <p>Let’s Stay in Touch!</p>
+                        </div>
+                        <div class="text-right-col">
+                            <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                        </div>
+                        <div class="suscribe">
+                            <form>
+                                <input type="email" placeholder="your email address">
+                                <button type="submit" class="button-products"></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer">
+                    <div class="copyr">© Copyright - INTERIOR 2016. All Rights Reserved.</div>
+                    <div class="socialimg">
+                        <a href="#" class="soc"><img src="img/social-links.png" alt="social"></a>
+                    </div>
+                    <div class="terms"><a href="#" class="link link-active">Terms &amp; Conditions</a> / <a href="#" class="link link-active">Privacy policy &amp; Cookies</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
+
 </html>
