--- a/proddetals.html
+++ b/proddetals.html
@@ -75,14 +75,14 @@
                 </div>
             </div>
         </div>
-        <div class="promo">
-                <div class="promo-left">
+        <div class="promo2">
+                <div class="promo-left2">
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
                         <p class="promo-content clearfix">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="button">Order Us ></a> </div>
                 </div>
-                <div class="promo-right">
+                <div class="promo-right2">
                     <div class="promo-text">
                         <p class="promo-exclusive">exclusive</p>
                         <h2 class="promo-h2">Fishnet Chair</h2>
