add map contact.html

--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,7 @@
                     <p class="contact-address">12 W 1st St, 90001 Los Angeles, California</p>
                 </div>
                 <div class="cont2">
-                    <p class="icon-location">&#xe947;</p>
-                    <h2 class="contact-text-h2">California</h2>
-                    <p class="contact-text">Phone:</p>
-                    <p class="contact-text-bold">1900 - 1234 -5678</p>
-                    <p class="contact-text">Email:</p>
-                    <p class="contact-text-bold">info@interior.com</p>
-                    <p class="contact-address">Adress:</p>
-                    <p class="contact-address">12 W 1st St, 90001 Los Angeles, California</p>
+                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1842be25f04523e823b21cd09d38ac220d8f02dea153baeb477d4a7ddfd5797f&amp;source=constructor" width="370" height="370" frameborder="0"></iframe>
                 </div>
                 <div class="cont3">
                     <p class="icon-location">&#xe947;</p>
